fix align cross burger

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -43,14 +43,14 @@
 .navbar .wrapper-navbar .burger.open span:nth-child(2) {
   transform: rotate(45deg);
   position: absolute;
-  left: 2px;
+  top: 10px;
+  left: 0px;
   margin-top: 0;
 }
 
 .navbar .wrapper-navbar .burger.open span:nth-child(1) {
   position: absolute;
-  right: -2px;
-  top: 9px;
+  top: 10px;
   transform: rotate(-45deg);
 }
 
@@ -59,7 +59,8 @@
   height: 2px;
   width: 20px;
   background-color: #333;
-  transition: transform 0.4s;
+  transition: transform 0.4s, top 1s;
+  transform-origin: center;
 }
 
 .navbar .wrapper-navbar .burger span:nth-child(2) {
