--- a/src/components/SitePages/MonCompte/MonCompte.css
+++ b/src/components/SitePages/MonCompte/MonCompte.css
@@ -45,11 +45,14 @@
   transform: translateX(0);
 }
 
-.profil-page .left-block.open span:nth-child(1) {
+.profil-page .left-block.open .burger span:nth-child(1) {
+  position: absolute;
+  right: 0;
+  top: 6px;
   transform: rotate(-45deg);
 }
 
-.profil-page .left-block.open span:nth-child(2) {
+.profil-page .left-block.open .burger span:nth-child(2) {
   transform: translateY(2px) translateX(-2px) rotate(45deg);
 }
 
